fixed misaligned layout

--- a/app/assets/custom.css
+++ b/app/assets/custom.css
@@ -303,11 +303,14 @@ input[type="number"]::-webkit-outer-spin-button {
     max-height: 90vh;
   } */
   #isotopomer_form-collapse {
-    height: calc(85vh - 40px - 20px - 145px);
+    height: calc(85vh - 40px - 20px - 124px);
+  }
+  .tab-scroll {
+    height: calc(85vh - 40px - 20px - 274px);
     overflow-y: scroll;
   }
   #dimension-tab-scroll-0 {
-    height: calc(85vh - 78px);
+    height: calc(85vh - 79px);
     overflow-y: scroll;
   }
   #nmr_spectrum {
